--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,32 @@
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
 #score-display {
-    font-weight: bold;
+    font-weight: 500;
     color: #2ca87f;
     background-color: #2ca87f22;
     padding: 4px 8px;
-    border-radius: 44px;
-    margin-left: 8px;
-    transition: background-color 0.3s ease;
+    border-radius: 4px;
+    margin-left: 16px;
+    opacity: 0;
+    animation: fadeIn 0.8s forwards;
     text-transform: none;
+}
+
+.score-display {
+    font-weight: bold !important;
+    padding: 8px !important;
+    border-radius: 9999px !important;
+    margin: 0 0 16px 0 !important;
+    font-size: 44px;
+    aspect-ratio: 1;
+}
+
+#container-score {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
